--- a/config.json
+++ b/config.json
@@ -34,6 +34,7 @@
                 "repo" : "https://github.com/llvm-mirror/llvm.git",
                 "commit" : "9ad322c7dfd4385be9a515d734f70700f192ebae"
             },
+            "cmake options" : ["-Thost=x64", "-Wno-dev"],
             "project to check" : "ADTTests",
             "known errors" : [
                 {
