+ known error for OpenSceneGraph
It has appeared after resharper commit b19da92c9f3f53a8e0f1dc305c59cfc6d84086f3
and it is caused by #define exanaded to 2 different values in different inclusion contexts.

--- a/config.json
+++ b/config.json
@@ -55,7 +55,13 @@
             "sources" : {
                 "repo" : "https://github.com/openscenegraph/OpenSceneGraph.git",
                 "commit" : "85504b45f6229c2695bc109d771045fcb10fc1e0"
-            }
+            },
+            "known errors" : [
+                {
+                    "file": "..\\src\\osgPlugins\\cfg\\ConfigParser.cpp", "line": "251",
+                    "message": "Cannot resolve symbol 'ConfigParser_lex'"
+                }
+            ]
         },
         "OpenCV" : {
             "sources" : {
