--- a/config.json
+++ b/config.json
@@ -179,6 +179,7 @@
                 "path to .sln" : "examples/imgui_examples.sln"
             }
         },
+        "benchmark" : "Benchmark.json",
         "PhysX-3.4" : {
             "sources" : {
                 "repo" : "https://github.com/NVIDIAGameWorks/PhysX-3.4.git",
