--- a/config.json
+++ b/config.json
@@ -179,6 +179,7 @@
                 "path to .sln" : "examples/imgui_examples.sln"
             }
         },
+        "shaderc" : "Shaderc.json",
         "benchmark" : "Benchmark.json",
         "PhysX-3.4" : {
             "sources" : {
